# {{cookiecutter.project_name}}-back/internal/repository/model.go
@@ -1,15 +1,15 @@
 package repository
 
-// Device table model
-type deviceTable struct {
-	DeviceId  string          `dynamodbav:"deviceId"`
-	Meta      metaDeviceTable `dynamodbav:"meta"`
+// {{cookiecutter.model_name.capitalize()}} table model
+type {{cookiecutter.model_name}}Table struct {
+	{{cookiecutter.model_name.capitalize()}}Id  string          `dynamodbav:"{{cookiecutter.model_name}}Id"`
+	Meta      meta{{cookiecutter.model_name.capitalize()}}Table `dynamodbav:"meta"`
 	CreatedAt int64           `dynamodbav:"createdAt"`
 	UpdatedAt int64           `dynamodbav:"updatedAt"`
 }
 
-// metaDeviceTable
-type metaDeviceTable struct {
+// meta{{cookiecutter.model_name.capitalize()}}Table
+type meta{{cookiecutter.model_name.capitalize()}}Table struct {
 	Model         string `dynamodbav:"model"`
 	HwVersion     string `dynamodbav:"hwVersion"`
 	OSVersion     string `dynamodbav:"osVersion"`
