# {{cookiecutter.project_name}}-back/lambda/createdevice/internal/model.go
@@ -4,5 +4,5 @@ import "github.com/divilo/{{cookiecutter.project_name}}-back/internal/model"
 
 type handlerRequest struct {
 	UserID                    string `eventmapper:"request.authorizer.username" validate:"required"`
-	model.CreateDeviceRequest `eventmapper:"request.body"`
+	model.Create{{cookiecutter.model_name.capitalize()}}Request `eventmapper:"request.body"`
 }
